--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,6 +11,8 @@ logging.level.io.undertow=WARN
 
 camel.springboot.name=SampleCamel
 hawtio.authenticationEnabled=false
+camel.springboot.tracing-standby=true
+
 
 # Uncomment these properties to enable the Camel plugin Trace tab
 #camel.springboot.tracing=true
